--- a/site/index.html
+++ b/site/index.html
@@ -61,7 +61,7 @@
     <h3>Trisagia and Dynamis</h3>
     <ul>
       <li>
-        <a href="tmp/Divine%20Liturgy/Trisagion%20and%20Dynamis/Trisagion%202%20Sourlantzes.pdf">Trisagion (SOurlantzes)</a>
+        <a href="tmp/Divine%20Liturgy/Trisagion%20and%20Dynamis/Trisagion%202%20Sourlantzes.pdf">Trisagion (Sourlantzes)</a>
       </li>
       <li>
         <a href="tmp/Divine%20Liturgy/Trisagion%20and%20Dynamis/Trisagion%202%20Brief.pdf">Trisagion (Brief)</a>
