--- a/site/index.html
+++ b/site/index.html
@@ -251,7 +251,7 @@
         <a href="tmp/Divine%20Liturgy/Leitourgika%20and%20Axion%20Estin/Axion%20Estin%204%20Mavropoulos.pdf">Adapted from Demetrius Mavropoulos (Zygos / Makam Müsteâr)</a>
       </li>
     </ul>
-    <h4>Plagal First Mode</h4>
+    <h4>Plagal of First Mode</h4>
     <ul>
       <li>
         <a href="tmp/Divine%20Liturgy/Leitourgika%20and%20Axion%20Estin/Axion%20Estin%20Pl%201%20Patriarchal.pdf">Adapted from the Patriarchal melody</a>
@@ -323,7 +323,7 @@
         <a href="tmp/Divine%20Liturgy/Leitourgika%20and%20Axion%20Estin/Axion%20Estin%20Pl%201%20Ohridski.pdf">Adapted from Joan Harmosin-Ohridski</a>
       </li>
     </ul>
-    <h4>Plagal Second Mode</h4>
+    <h4>Plagal of Second Mode</h4>
     <ul>
       <li>
         <a href="tmp/Divine%20Liturgy/Leitourgika%20and%20Axion%20Estin/Axion%20Estin%20Pl%202%20Sticheraric.pdf">Sticheraric</a>
@@ -416,7 +416,7 @@
         <a href="tmp/Divine%20Liturgy/Leitourgika%20and%20Axion%20Estin/Axion%20Estin%20Grave%20Ferahnak.pdf">Makam Ferâhnâk</a>
       </li>
     </ul>
-    <h4>Plagal Fourth Mode</h4>
+    <h4>Plagal of Fourth Mode</h4>
     <ul>
       <li>
         <a href="tmp/Divine%20Liturgy/Leitourgika%20and%20Axion%20Estin/Leitourgika%20Pl%204.pdf">Leitourgika</a>
